# FactoryMind

./: .gitignore  Dockerfile  README.md  SUBMISSION.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py  validate_submission.sh
factory_mind/: __init__.py  env.py  graders.py  models.py
server/: app.py
tests/: test_api.py  test_env.py
