[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "factory-mind"
version = "1.0.0"
description = "FactoryMind: 70MW Solar Factory RL Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "numpy>=1.26.0",
    "openai>=1.51.0",
    "requests>=2.32.0",
    "pulp>=2.9.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["factory_mind*", "server*"]

[project.scripts]
server = "server.app:main"